# examplesGoIT

./: .gitignore  README.md  requirements.txt
Lecture8/: ex_9.py
module10/additional materials/: user_containers_ex.py
module10/additional_materials/: inheritance_ex2.py
module10/conspect/: class_ex.py  class_ex2.py  class_ex_constructor.py  duck_typization.py  exceptions_ex.py  inheritance_ex.py  mro_ex.py  mro_ex_2.py  userdict_ex.py  userlist_ex.py  userstring_ex.py
module11/additional_materials/: init_ex2.py  properties_ex.py
module11/conspect/: arithmetic_operators_ex.py  context_manager.py  equation_operators_ex.py  functors_call_ex.py  get_set_item_ex.py  incapsulation.py  init_ex.py  iterator_ex.py  repr_ex.py  setter_property_ex.py  str_ex.py
module11/lesson1/: class_product.py  context_manager_ex3.py  context_manager_ex4.py  context_manager_ex5.py  context_singleton_ex.py  functor_ex.py  getitem_setitem_ex.py  iterator_ex3.py  iterator_ex4.py  new_ex.py  new_file.txt  repr_str_ex.py  singleton_ex.py
module11/lesson2/: animals_ex2.py  big_data_ex.py  class_decorator_ex.py  incapsulation_ex3.py  incapsulation_ex4.py  overridind_ex2.py  overriding_logic_operators_ex.py  password_storage_ex.py  (+1 more)
module6/: binary_files.py  byte_array_ex.py  context_manager.py  work_with_files.py  work_with_files_2.py  work_with_files_3.py
module7/video1/packaging_tutorial/: pyproject.toml  setup.cfg
module7/video1/packaging_tutorial/src/: test_example_package.py
module7/video1/packaging_tutorial/src/example_package/: __init__.py  test.py
test_folder/: test.py  test_useful_package.py
(+106 files in other folders)
