[metadata]
name = example_package_vskesha
version = 0.0.2
author = VsKesha
author_email = vskesha@gmail.com
description = A small example package v. 0.0.2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
    markdown
python_requires = >=3.6

[options.packages.find]
where = src